# High-Pricision_AD_HAT

c/: .gitignore  README.md
c/examples/: main.c
c/lib/Config/: DEV_Config.c
python/: config.py  pyproject.toml
rust/: Cargo.toml  README.md
rust/src/: ads1263.rs  error.rs  hal.rs  lib.rs  main.rs  registers.rs
